chore: 生产相关 & 已知问题修改

--- a/src/main/resources/static/css/edit-table.css
+++ b/src/main/resources/static/css/edit-table.css
@@ -21,7 +21,7 @@
 }
 
 .table-editor .required label:before, .table-editor label.required:before {
-    left: 0;
+    left: -8px;
 }
 
 .table-editor tr td:first-child, .table-editor tr td:last-child {
