--- a/src/main/resources/templates/modules/inventory/warning.html
+++ b/src/main/resources/templates/modules/inventory/warning.html
@@ -85,7 +85,7 @@
                                 <a href="javascript:;" th:if="${vStat.index == 1}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }" th:onclick="showDialog('查看', [[${m[0]}]])"></a>
                                 <span th:if="${vStat.index != 1}" th:text="${report.reportColumnList.get(vStat.index).type.name() eq 'NUMERIC' ? #numbers.formatInteger(v, 0, 'COMMA') : (report.reportColumnList.get(vStat.index).type.name() eq 'DECIMAL' ? #numbers.formatDecimal(v,1,'COMMA',2,'POINT') : v) }"></span>
                             </td>
-                            <td class="text-center" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}">
+                            <td class="text-center" sec:authorize="${hasAuthority(#vars.report.code + '_edit') or hasAuthority(#vars.report.code + '_delete')}" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}">
 <!--                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('查看', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">查看</a>-->
                                 <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', [[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_edit')}">编辑</a>
                                 <a href="javascript:;" th:onclick="deleteRow([[${m[0]}]])" sec:authorize="${hasAuthority(#vars.report.code + '_delete')}">删除</a>
@@ -254,11 +254,11 @@
             let maximumStockQuantity = $(this).find("td:nth-child(8)").text().trim();
 
             if (safetyStockQuantity && parseFloat(stockQuantity) < parseFloat(safetyStockQuantity)) {
-                $(this).find("td:nth-child(7)").css('background', '#e77470')
+                $(this).find("td:nth-child(7)").css('background', '#e77470').css('color', '#ffffff')
             }
 
             if (maximumStockQuantity && parseFloat(stockQuantity) > parseFloat(maximumStockQuantity)) {
-                $(this).find("td:nth-child(8)").css('background', '#e77470')
+                $(this).find("td:nth-child(8)").css('background', '#e77470').css('color', '#ffffff')
             }
         })
 
