chore: 生产单可以选择物料后去添加采购单

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -144,7 +144,7 @@
                             </a>
                         </li>
                         <li class="nav-item" sec:authorize="hasAuthority('produce_order_stock')">
-                            <a class="nav-link" href="javascript:addTab('produce_order_stock', '生产库存', '/reports/710331838161227776')">
+                            <a class="nav-link" href="javascript:addTab('produce_order_stock', '生产库存', '/reports/710331838161227776?mode=multiple')">
                                 <i class="nav-icon icon-clock"></i> 生产库存
                             </a>
                         </li>
