chore: add bom template

--- a/src/main/resources/templates/modules/produce_order.html
+++ b/src/main/resources/templates/modules/produce_order.html
@@ -268,6 +268,7 @@
         $('#dialogInputSingle').dialogInput({
             title: '选择物料',
             reportId: '697147523487240192',
+            params: "categoryId=715220808628178944",
             labelDisplay: function (row) {
                 return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
             },
@@ -296,6 +297,7 @@
         $('#dialogInput').dialogInput({
             title: '选择物料',
             reportId: '697147523487240192',
+            params: "categoryId=715220808628178944",
             mode: 'multiple', // 多选
             labelDisplay: function (row) {
                 return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
