--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -313,10 +313,17 @@
             //     allowClose: false
             // });
 
+            nthTabs.addTab({
+                id: "bom",
+                title: '物料清单',
+                url: "/produce/bom",
+                allowClose: false
+            });
+
             // nthTabs.addTab({
-            //     id: "bom",
-            //     title: '物料清单',
-            //     url: "/produce/bom",
+            //     id: "produce_orders",
+            //     title: '生产单',
+            //     url: "/produce_orders/new",
             //     allowClose: false
             // });
 
@@ -326,13 +333,6 @@
             //     url: "/produce_orders/new",
             //     allowClose: false
             // });
-
-            nthTabs.addTab({
-                id: "produce_orders",
-                title: '生产单',
-                url: "/produce_orders/new",
-                allowClose: false
-            });
         })
     </script>
 </div>
